@@ -3,7 +3,7 @@ Type: Package
 Title: an R package for visualization and annotation of phylogenetic trees with their covariates and other associated data
 Version: 1.7.2
 Authors@R: c(
-	   person("Guangchuang", "Yu", email = "guangchuangyu@gmail.com", role = c("aut", "cre")),
+	   person("Guangchuang", "Yu", email = "guangchuangyu@gmail.com", role = c("aut", "cre", "cph")),
 	   person("Tommy Tsan-Yuk", "Lam", email = "tylam.tommy@gmail.com", rol = c("aut", "ths")),
 	   person("Justin", "Silverman", email = "jsilve24@gmail.com", rol = "ctb", comment = "geom_balance"),
 	   person("Casey", "Dunn", email = "casey_dunn@brown.edu", rol = "ctb",
