@@ -126,6 +126,7 @@ export(theme_tree)
 export(theme_tree2)
 export(viewClade)
 export(write.jplace)
+export(xlim_expand)
 export(xlim_tree)
 exportClasses(apeBootstrap)
 exportClasses(beast)
