@@ -100,19 +100,19 @@
 ##' @author Guangchuang Yu
 `%+>%` <- function(p, data) {
     df <- p$data
-    lv <- levels(df$panel)
+    lv <- levels(df$.panel)
 
     if (is(data, "GRanges") || is(data, "GRangesList")) {
         names(data) <- df$y[match(names(data), df$label)]
         res <- data[order(as.numeric(names(data)))]
         mcols <- get_fun_from_pkg("GenomicRanges", "mcols")
         `mcols<-` <- get_fun_from_pkg("GenomicRanges", "`mcols<-`")
-        mcols(res)$panel <- factor(lv[length(lv)], levels=lv)
+        mcols(res)$.panel <- factor(lv[length(lv)], levels=lv)
     } else if (is(data, "data.frame") || is(data, "tbl_df")) {
         data <- as.data.frame(data)
         ## res <- merge(df[, c('label', 'y')], data, by.x='label', by.y=1) ## , all.x=TRUE)
         res <- merge(df[, !names(df) %in% c('node', 'parent', 'x', 'branch', 'angle')], data, by.x='label', by.y=1)
-        res$panel <- factor(lv[length(lv)], levels=lv)
+        res$.panel <- factor(lv[length(lv)], levels=lv)
     } else {
         stop("input 'data' is not supported...")
     }
