@@ -1,19 +1,21 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/xlim.R
-\name{xlim_tree}
-\alias{xlim_tree}
-\title{xlim_tree}
+\name{xlim_expand}
+\alias{xlim_expand}
+\title{xlim_expand}
 \usage{
-xlim_tree(xlim)
+xlim_expand(xlim, panel)
 }
 \arguments{
 \item{xlim}{xlim}
+
+\item{panel}{panel}
 }
 \value{
 updated tree view
 }
 \description{
-set x axis limits for Tree panel
+expand x axis limits for specific panel
 }
 \author{
 guangchuang yu
